# eshkol

./: .dockerignore  .gitignore  .gitignore_audit_binaries  .gitlab-ci.yml  AD_DEPTH_REPORT.md  AD_NESTED_REUSE_ROOTCAUSE_2026-06-26.md  ANNOUNCEMENT.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.backup  COMPLETE_LANGUAGE_SPECIFICATION.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.test  ESHKOL_ICC_COMPLETE_REVIEW_2026-07-01.md  ESHKOL_LANGUAGE_GUIDE.md  ESHKOL_LANGUAGE_UPDATE_BRIEF.md  ESHKOL_QUICK_REFERENCE.md  ESHKOL_TO_NOESIS_nested_ad_2026-06-26.md  ESHKOL_TO_NOESIS_static_getenv_RESOLVED_2026-06-26.md  ESHKOL_V1_LANGUAGE_REFERENCE.md  HARDENING.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  METAPROG_DEPTH_REPORT.md  Makefile  NOESIS_TO_ESHKOL_capability_env_2026-06-26.md  NOESIS_TO_ESHKOL_nested_ad_2026-06-26.md  NOESIS_TO_ESHKOL_static_getenv_2026-06-26_SUPERSEDED.md  README.md  RECURSION_DEPTH_REPORT.md  REFERENCE_DIFFERENTIAL_REPORT.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.3.0-evolve.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  SANITIZER_FUZZ_REPORT.md  SECURITY.md  SICP_COMPLETENESS_REPORT.md  STDLIB_ADDITIONS.md  (+16 more)
examples/: CMakeLists.txt  README.md  advanced_function_composition.esk  arithmetic.esk  autodiff.c  autodiff.esk  autodiff_example.esk  bayesian_diagnosis.esk  complex_test.esk  consciousness.esk  debug_2x3_matrix.esk  debug_dimensional_reduction.esk  debug_full_result.esk  debug_matrix_dimensions.esk  debug_row_sum.esk  debug_step_by_step.esk  debug_tensor_dims.esk  debug_tensor_dot_simple.esk  debug_tensor_reduce.esk  debug_test.esk  demo_real_modifier.esk  differentiable_physics.esk  dimensional_reduce_demo.esk  display_test.esk  eagle_train.esk  equality_predicates.esk  explicit_param_typed.esk  factorial.esk  factorial.esk.c  fibonacci.esk  fibonacci_simple.esk  function_composition.esk  function_composition_array.esk  function_composition_closure.esk  function_composition_complete.esk  function_composition_example.esk  function_composition_n.esk  function_composition_test.esk  gradient_descent_demo.esk  h2_vibrational.esk  (+90 more)
src/: CMakeLists.txt  main.c
src/backend/: CMakeLists.txt  codegen.c
src/core/: CMakeLists.txt
src/frontend/: CMakeLists.txt  type_inference.c
tests/: CMakeLists.txt  advanced_mixed_type_test.esk  apply_twice_closure.esk  basic_operations_test.esk  both_closures_reversed.esk  bug_BB_indirector_double_call.esk  bug_BB_minimal_xfile_indirector.esk  bug_BB_xfile_indirector_regression.esk  bug_BB_xfile_lib.esk  closure_mutation_test.esk  compose_only.esk  compose_test.esk  debug_binary_search_2b.esk  debug_binary_search_2c.esk  debug_binary_search_2d.esk  debug_closure.esk  debug_exact_repro_1.esk  debug_exact_repro_2.esk  debug_gradient_car_cadr.esk  debug_gradient_cdr.esk  debug_gradient_local_cadr.esk  debug_map_3elements.esk  debug_map_simple.esk  debug_member_take.esk  debug_sequential_maps.esk  debug_static_collision.esk  debug_trace_cadr.esk  file_io_debug_test.esk  file_io_define_vs_let.esk  file_io_inline_test.esk  for_each_test.esk  gradual_higher_order_test.esk  higher_order_test.esk  lambda_sexpr_simple_test.esk  let_values_closure_capture.esk  list_star_test.esk  minimal_test.esk  mixed_type_lists_basic_test.esk  multi_closure_test.esk  nested_apply_test.esk  (+36 more)
tests/ad/: checkpointed_reverse_test.esk  diff_control_flow_test.esk  exact_taylor_test.esk  forward_over_reverse_test.esk  free_energy_ad_test.esk  guw_multivariate_test.esk  hessian_matmul_reshape_test.esk  hessian_tensor_op_test.esk  mixed_mode_ad_test.esk  nested_ad_loop_test.esk  nested_ad_test.esk  one_pass_gradient_test.esk  reverse_nested_forward_test.esk  reverse_over_taylor_test.esk  sparse_tensors_test.esk  stateful_tape_test.esk  sweep_c_regressions_test.esk  taylor_models_test.esk  taylor_numerics_test.esk  taylor_tower_mono_test.esk  taylor_tower_noheap_bench.esk  taylor_tower_test.esk  tensor_grad_vector_point_test.esk  tensor_input2_grad_test.esk  tensor_tower_test.esk  vm_ad_full_test.esk  vm_ad_test.esk
tests/ad_adversarial/: README.md  gen_ad_adversarial.py
tests/ad_depth/: README.md
tests/ad_oracle/: README.md  gen_ad_oracle.py
tests/ad_taylor_poc/: run.sh  taylor_poc.c
tests/agent/: agent_capabilities_test.c  agent_cpp_exception_abi_test.cpp  agent_http_contract_test.c  agent_sse_parser_test.c  windows_native_agent_test.c
tests/autodiff/: autodiff_edge_test.esk  debug_gradient_no_let.esk  debug_gradient_only.esk  debug_lambda_vector_return.esk  debug_minimal.esk  debug_no_gradient.esk  debug_operators.esk  debug_vector_creation.esk  debug_vector_only.esk  diagnostic_graph_trace.esk  diagnostic_tensor_dims.esk  diff_geom_test.esk  gradient_callable_arity_test.esk  gradient_debug.esk  gradient_scalar_test.esk  gradient_simple.esk  gradient_tensor_loss_test.esk  phase0_diff_fixes.esk  phase0_type_fix_test.esk  phase2_forward_test.esk  phase2_minimal.esk  phase2_simple_test.esk  phase2_test2.esk  phase2_tests_1_7.esk  phase3_complete_test.esk  phase3_infrastructure_test.esk  phase3_real_ad_test.esk  phase4_real_vector_test.esk  phase4_simple_test.esk  phase4_vector_calculus_test.esk  simple_diff_test.esk  test_ad_aware_execution.esk  test_bitcast_fix.esk  test_closure_diagnostic.esk  test_full_gradient_composition.esk  test_gradient_composition.esk  test_gradient_direct.esk  test_gradient_minimal.esk  test_gradient_vref.esk  test_jacobian_display.esk  (+15 more)
tests/autodiff_debug/: test_sch_006_type_inference.esk  test_sch_007_vector_returns.esk
tests/backend/: blas_provider_test.cpp  qllm_backward_gradcheck_test.c  tensorcore_adapter_test.cpp  tensorcore_codegen_test.cpp  tensorcore_compatibility_test.cpp  tensorcore_language_smoke.esk
tests/benchmark/: timing_test.esk
tests/benchmarks/: blas_matmul_benchmark.esk  cpu_features_test.cpp  tensor_simd_benchmark.esk
tests/bignum/: bignum_edge_cases_test.esk  bignum_test.esk
tests/build_integration/: CMakeLists.txt  dep.esk  main.esk
tests/closures/: closure_edge_test.esk  closure_set_in_tco_loop_test.esk  curried_chain_depth_test.esk  shared_mutable_capture_test.esk  (+1 more)
tests/fuzz/: README.md  (+3 more)
(+2792 files in other folders)
